--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"> 
-<!-- ========================== tis is for google location  icon ======================== -->
+<!-- ========================== this is for google location  icon ======================== -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <!--===================================== this is our custom style sheet ======================== -->
 <link rel="stylesheet" href="style.css">
@@ -37,7 +37,7 @@
     </div>
     <!--=========================q`'
      '= firebase configuration file ====================== -->
-    <script src="index.js"></script>
+    <script src="/index.js"></script>
     <!--================================ custom script file========================================== -->
     <script src="custom.js"></script>
 </body>
